--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
+    "@repo/db" : "workspace:*",
     "@types/react-dom": "19.0.4",
     "eslint": "^9.22.0",
     "typescript": "5.8.2"
