--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -2,6 +2,7 @@
   "name": "@repo/db",
   "version": "1.0.0",
   "main": "index.js",
+  "types": "client.d.ts",
   "exports": {
     "./client" : "./src/index.ts"
   },
